Fix horizontal scrolling in aboutUs

--- a/client/src/ContactUs.css
+++ b/client/src/ContactUs.css
@@ -80,7 +80,7 @@
     padding-left: 15px;
     padding-right: 15px;
     margin-left: -15px;
-    margin-right: -15px;
+    /* margin-right: -15px; */
 }
 .h4-title{
     /* margin-bottom: 2px; */
